--- a/ThePersonalTrainerClub/app/src/main/res/layout/fragment_class_trainer.xml
+++ b/ThePersonalTrainerClub/app/src/main/res/layout/fragment_class_trainer.xml
@@ -66,7 +66,7 @@
                     android:layout_height="16dp"
                     android:layout_marginBottom="2dp"
                     android:layout_marginTop="2dp"
-                    app:srcCompat="@drawable/ic_icon" />
+                    app:srcCompat="@drawable/ic_location" />
 
                 <ImageView
                     android:id="@+id/imageView8"
