--- a/ThePersonalTrainerClub/app/src/main/res/layout/fragment_class_trainer.xml
+++ b/ThePersonalTrainerClub/app/src/main/res/layout/fragment_class_trainer.xml
@@ -33,7 +33,7 @@
                 android:orientation="vertical">
 
                 <TextView
-                    android:id="@+id/textView2"
+                    android:id="@+id/text_name_sport"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_gravity="center"
@@ -45,7 +45,7 @@
                     tools:text="Balonmano" />
 
                 <ImageView
-                    android:id="@+id/imageView4"
+                    android:id="@+id/image_sport_class"
                     android:layout_width="50dp"
                     android:layout_height="50dp"
                     android:layout_gravity="center"
@@ -114,7 +114,7 @@
                     android:background="?android:attr/listDivider" />
 
                 <TextView
-                    android:id="@+id/textView4"
+                    android:id="@+id/text_location_class"
                     android:layout_width="match_parent"
                     android:layout_height="20dp"
                     android:text="@string/fragment_class_name_location"
@@ -122,7 +122,7 @@
                     tools:text='Gimnasio "El gran atardecer"' />
 
                 <TextView
-                    android:id="@+id/textView6"
+                    android:id="@+id/text_date_class"
                     android:layout_width="match_parent"
                     android:layout_height="20dp"
                     android:text="@string/fragment_class_date"
@@ -130,7 +130,7 @@
                     tools:text="12 Septiembre 2018" />
 
                 <TextView
-                    android:id="@+id/textView5"
+                    android:id="@+id/text_time_class"
                     android:layout_width="match_parent"
                     android:layout_height="20dp"
                     android:text="@string/fragment_class_time"
@@ -138,7 +138,7 @@
                     tools:text="De 16:00 a 17:00" />
 
                 <TextView
-                    android:id="@+id/textView7"
+                    android:id="@+id/text_number_pupils_class"
                     android:layout_width="match_parent"
                     android:layout_height="20dp"
                     android:text="@string/fragment_class_number_user"
@@ -146,7 +146,7 @@
                     tools:text="Alumnos ( 12/20 )" />
 
                 <TextView
-                    android:id="@+id/textView8"
+                    android:id="@+id/text_price_class"
                     android:layout_width="match_parent"
                     android:layout_height="20dp"
                     android:text="@string/fragment_class_price"
@@ -180,7 +180,7 @@
                 android:orientation="horizontal">
 
                 <ImageView
-                    android:id="@+id/imageView3"
+                    android:id="@+id/image_coach_class"
                     android:layout_width="36dp"
                     android:layout_height="36dp"
                     android:layout_gravity="center"
@@ -195,14 +195,14 @@
                     android:padding="4dp">
 
                     <TextView
-                        android:id="@+id/textView10"
+                        android:id="@+id/text_name_coach_class"
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
                         android:text="@string/fragment_class_name_instructor"
                         android:textColor="@color/text" />
 
                     <TextView
-                        android:id="@+id/textView9"
+                        android:id="@+id/text_lastname_coach_class"
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
                         android:text="@string/fragment_class_lastname_instructor"
@@ -210,7 +210,7 @@
                 </LinearLayout>
 
                 <Button
-                    android:id="@+id/button2"
+                    android:id="@+id/button_vote_class"
                     style="?attr/buttonStyle"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
@@ -219,7 +219,7 @@
                     android:visibility="visible" />
 
                 <Button
-                    android:id="@+id/button"
+                    android:id="@+id/button_cancel_class"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_weight="3"
